Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10045

sanity-lfsck no sub tests failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.11.0, Lustre 2.10.4
    • Lustre 2.11.0
    • None
    • onyx, full
      servers: el7, zfs, branch master, v2.10.53.1, b3642
      clients: el7, branch master, v2.10.53.1, b3642
    • 3
    • 9223372036854775807

      https://testing.hpdd.intel.com/test_sessions/ecf02eea-e0bb-48ce-a644-fed2036c2478

      From suite_log:

      Starting ost1:   lustre-ost1/ost1 /mnt/lustre-ost1
      CMD: onyx-35vm12 mkdir -p /mnt/lustre-ost1; mount -t lustre lustre-ost1/ost1 /mnt/lustre-ost1
      onyx-35vm12: mount.lustre: mount lustre-ost1/ost1 at /mnt/lustre-ost1 failed: 
        Cannot send after transport endpoint shutdown
      

      The subsequent three test sets (sanityn, sanity-hsm, & sanity-lsnapshot) also run no subtests and have suite logs that end with this message:

      according to /etc/mtab lustre-mdt1/mdt1 is already mounted on /mnt/lustre-mds1
      

            yong.fan nasf (Inactive)
            jcasper James Casper (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: